menus and chef implementation

--- a/webcontent/resturants.html
+++ b/webcontent/resturants.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="orders">
 	<div class="container">
 		<div class="order-top">
-			<li class="im-g"><a href="#"><img src="images/1p.jpg" class="img-responsive" alt=""></a></li>
+			<li class="im-g"><a><img src="images/1p.jpg" class="img-responsive" alt=""></a></li>
 			<li class="data"><h4>Diners - Calangute Grande</h4>
 				<p>EuropeanNorth Indian</p>
 				<P> Many desktop publishing packages</P>
