--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -13,17 +13,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />		
 </head>
-<body ng-app="wunderChefApp">
-<header>
+<body ng-app="wunderChefApp" ng-controller="MainController as mainCtrl">
+<header  ng-class="{'showHeader':$root.showPageHeader, 'hideHeader':!$root.showPageHeader}">
 <!-- header -->
-<div class="head-top" ng-controller="MainController as mainCtrl">
+<div class="head-top">
 			
 		</div>
 	<div class="header">
 		
 		<div class="container">
 			<div class="logo">
-				<a href="#/"><img src="images/imageedit_4_5531157858.png" class="img-responsive" alt=""></a>
+				<a href="#/"><img src="images/imageedit_4_55311578581.png" class="img-responsive" alt=""></a>
 			</div>
 			<!--<div class="header-left">
 				<div class="head-nav">
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 </header>
 <!-- header -->
-<div id="viewDom" ng-view></div>
+<div  ng-view></div>
 <!-- footer-->
 	<div class="footer">
 		<div class="container">
@@ -77,6 +77,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/angular.js"></script>
 <script src="js/angular-route.js"></script>
 <script src="js/angular-touch.min.js"></script>
+<script src="js/angular-animate.js"></script>
+<script src="js/ui-bootstrap.js"></script>
 <script src="js/app.js"></script>
 
 <script src="js/app/controllers/main-controller.js"></script>
